fix: add some test changes + some minor fixes
Delete mock lib for tests, add DI for service (filters)